# parksight

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data/: conformal_full.json  deployment_backtest.json  findings_full.json  forecast_full.json  hotspots_full.parquet  impact_full.json  relocation_full.json  seed_robustness.json  shifts_full.json  transitions_full.parquet
src/parksight/: config.py  service.py
src/parksight/analysis/: emergence.py  shifts.py
src/parksight/api/: main.py
src/parksight/dashboard/: app.py
src/parksight/features/: disruption.py
src/parksight/forecast/: baselines.py  conformal.py  evaluate.py  gbm.py  graph.py  model.py  pipeline.py  windows.py
src/parksight/impact/: deploy.py  exposure.py  hawkes.py  intensity.py  report.py
src/parksight/ingest/: audit.py  loader.py
src/parksight/optimize/: backtest.py  coverage.py
src/parksight/scoring/: priority.py
