[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parksight"
version = "0.1.0"
description = "Parking-congestion intelligence for Bengaluru traffic enforcement"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "pyarrow>=15",
]

[project.optional-dependencies]
spatial = ["h3>=4", "esda>=2.5", "libpysal>=4.9"]
forecast = ["torch>=2.2", "torch-geometric>=2.5", "torch-geometric-temporal>=0.54", "lightgbm>=4.3"]
impact = ["statsmodels>=0.14"]
service = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6"]
dashboard = ["streamlit>=1.33", "pydeck>=0.9"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.9", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/parksight"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
